tests/expected/err-cmpfunc.uc.out
/home/krikava/Teaching/FIT/NI-APR/2022/microc/tests/../examples/err-cmpfunc.uc:[12:11]: error: Non-integer arithmetic operation
      if (f > g) { // error: function comparison
            ^

1
